[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/Title.png" type="Texture" id=1]
[ext_resource path="res://Fabs/SceneCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fabs/Tilemap.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fabs/Menu.gd" type="Script" id=4]

[node name="Level_0" type="Node2D"]

[node name="Camera2D" parent="." instance=ExtResource( 2 )]

[node name="Tilemap" parent="." instance=ExtResource( 3 )]

[node name="Title" type="Sprite" parent="."]
position = Vector2( 200, 68 )
texture = ExtResource( 1 )

[node name="Menu" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="Main" type="Control" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Menu/Main"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Main/CenterContainer"]
margin_left = 736.0
margin_top = 416.0
margin_right = 864.0
margin_bottom = 484.0

[node name="Play" type="Button" parent="Menu/Main/CenterContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
text = "Play"

[node name="How To Play" type="Button" parent="Menu/Main/CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 128.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 32 )
text = "How To Play"

[node name="HowTo" type="Control" parent="Menu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Menu/HowTo"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/HowTo/CenterContainer"]
margin_left = 665.0
margin_top = 331.0
margin_right = 934.0
margin_bottom = 568.0

[node name="Label" type="Label" parent="Menu/HowTo/CenterContainer/VBoxContainer"]
margin_right = 269.0
margin_bottom = 201.0
text = "W or Up to Jump
A or Left Arrow to move left
D or Right Arrow to move right 

Your inputs will be buffered on the top bar
 including no input at all.

to play back your inputs press SPACE

if you get stuck press R to reset

Thank you for playing!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Menu/HowTo/CenterContainer/VBoxContainer"]
margin_top = 205.0
margin_right = 269.0
margin_bottom = 237.0
rect_min_size = Vector2( 0, 32 )
text = "Back"
[connection signal="pressed" from="Menu/Main/CenterContainer/VBoxContainer/Play" to="Menu" method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/Main/CenterContainer/VBoxContainer/How To Play" to="Menu" method="_on_How_To_Play_pressed"]
[connection signal="pressed" from="Menu/HowTo/CenterContainer/VBoxContainer/Back" to="Menu" method="_on_Back_pressed"]
